Fix cloudflare minifier messing up pre white spaced descriptions

--- a/timeweb/timewebapp/static/css/index.css
+++ b/timeweb/timewebapp/static/css/index.css
@@ -321,7 +321,6 @@ a[href="/settings"] {
     position: relative;
     display: none;
     opacity: var(--description-opacity);
-    white-space: pre-wrap;
     transform: translateY(-2px);
     min-width: var(--left-side-of-header-width);
     max-width: var(--left-side-of-header-width);
